--- a/HTML/battleshiplobby.html
+++ b/HTML/battleshiplobby.html
@@ -11,7 +11,10 @@
     <section class="lobbymenu">
         <div class="lobbies">
             <div>
-                <a class="button">Join Game</a><p>1/2</p> //how to do better?
+                <article class="lobbytable">
+                    <a class="button">Join Game</a>
+                    <p>1/2</p>
+                </article>
             </div>
             <div></div>
             <div></div>
