end of Night 4/17/2024

--- a/HTML/battleshiplobby.html
+++ b/HTML/battleshiplobby.html
@@ -8,13 +8,29 @@
     <article class="header">
         <a id="homebutton" href="index.html">Home</a>
     </article>
+    <article>
+        <label for="PlayerName">Player Name:</label>
+        <input name="PlayerName">
+    </article>
+    <br>
+    <br>
     <section class="lobbymenu">
         <div class="lobbies">
-            <div>
-                <a class="button">Join Game</a><p>1/2</p> //how to do better?
+            <div class="Lobby">
+                <section class="label">Caden's Game</section>
+                <section class="label">1/2</section>
+                <a class="button" href="battleship.html">Join Game</a>
             </div>
-            <div></div>
-            <div></div>
+            <div class="Lobby">
+                <section class="label">*Empty* Game</section>
+                <section class="label">0/2</section>
+                <a class="button" href="battleship.html">Join Game</a>
+            </div>
+            <div class="Lobby">
+                <section class="label">*Empty* Game</section>
+                <section class="label">0/2</section>
+                <a class="button" href="battleship.html">Join Game</a>
+            </div>
         </div>
     </section>
 </body>
