--- a/HTML/battleship.html
+++ b/HTML/battleship.html
@@ -58,7 +58,7 @@
         <div class="LetterRow">J</div>
       </div>
     </section>
-    <article>
+    <article class="scrollable">
         <hr>
         <div>Current Highest Scores</div>
         <hr>
